# js_assigment

./: alembic.ini  docker-compose.yml  pyproject.toml  Тестовое задание pyton (django) june+.md
app/: main.py  settings.py
app/alembic/: env.py
app/alembic/versions/: 499cdfad8ada_init.py  b33449c71d37_add_model_wallet_operation.py
app/api/: endpoints.py
app/api/router/: wallets.py
app/db/: models.py  session.py
app/schemas/: wallet.py
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  pre_start.py  settings.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: af776cab85cb_remove_model_operation.py
backend/app/api/: endpoints.py
backend/app/api/router/: wallets.py
backend/app/db/: models.py  session.py
backend/app/schemas/: wallet.py
