[tool.poetry]
name = "js-assigment"
version = "0.1.0"
description = ""
authors = ["den232i <id12-97@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.11"
sqlalchemy = "^2.0.39"
envparse = "^0.2.0"
alembic = "^1.15.1"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"
tenacity = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
